--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="buttonInformations.buttonSpinner === false; else spinnerValid">
-    <button type="submit" [disabled]="!buttonInformations.buttonFormValidate.valid" class="button">{{ buttonInformations.buttonTitle }}</button>
+    <button type="submit" [disabled]="buttonInformations.buttonFormValidate.valid" class="button">{{ buttonInformations.buttonTitle }}</button>
 </ng-container>
 <ng-template #spinnerValid>
     <button type="buttonInformations.buttonType" class="button">
