fix: remove button

--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="showModal">
     <section class="modal">
         <header class="modal__header">
-            <button class="material-icons" (click)="closeModal()">close</button>
+            <i class="material-icons" (click)="closeModal()">close</i>
         </header>
         <section class="modal__body">
             <p>{{ modalInformations.title }}</p>
