style: changed edit icon

--- a/src/app/modules/products/product-list/product-list.component.scss
+++ b/src/app/modules/products/product-list/product-list.component.scss
@@ -42,7 +42,7 @@
             cursor: pointer;
 
             &--edit {
-                background-color: $yellow;
+                background-color: $blue;
             }
 
             &--delete {
