--- a/src/app/modules/authentication/signin/signin.component.html
+++ b/src/app/modules/authentication/signin/signin.component.html
@@ -1,14 +1,22 @@
-<form class="signin">
+<form class="signin" [formGroup]="authenticationForm" (ngSubmit)="submitLogin()">
     <header class="signin__header">
         <h2 class="signin__header__title">Login</h2>
     </header>
 
     <div class="signin__inputs">
-        <input type="text" class="signin__inputs__style" placeholder="Digite seu nome de usuario">
-        <input type="password" class="signin__inputs__style" placeholder="Digite sua senha">
+        <input 
+        type="text" 
+        class="signin__inputs__style" 
+        placeholder="Digite seu nome de usuario"
+        formControlName="username">
+        <input 
+        type="password" 
+        class="signin__inputs__style" 
+        placeholder="Digite sua senha"
+        formControlName="password">
     </div>
     <footer class="signin__footer">
-        <button class="button signin__footer__button">Fazer login</button>
+        <app-button [buttonInformations]="buttonInformations"></app-button>
         <span>Ainda nao possui conta? </span><a [routerLink]="'/signup'">Criar conta</a>
     </footer>
 </form>
