feature: add complete login

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -14,7 +14,7 @@
         </ul>
     </section>
     <footer class="menu__profile">
-        <p>Yasmim</p>
+        <p>{{ user }}</p>
         <i class="material-icons ">logout</i>
     </footer>
 </aside>
