feature: changed sidebar position

--- a/src/app/modules/products/create-product/create-product.component.html
+++ b/src/app/modules/products/create-product/create-product.component.html
@@ -1,3 +1,4 @@
+<app-sidebar></app-sidebar>
 <section class="product">
     <form class="product__form" [formGroup]="productForm" (ngSubmit)="submitNewProduct()">
         <h3 class="product__form__title">Criar novo produto</h3>
