--- a/src/app/modules/products/edit-product/edit-product.component.html
+++ b/src/app/modules/products/edit-product/edit-product.component.html
@@ -1,4 +1,4 @@
-
+<app-sidebar></app-sidebar>
 <section class="product" *ngIf="editProductForm">
     <form class="product__form" [formGroup]="editProductForm" (ngSubmit)="editProduct()">
         <h3 class="product__form__title">Criar novo produto</h3>
