--- a/src/app/modules/products/product-list/product-list.component.html
+++ b/src/app/modules/products/product-list/product-list.component.html
@@ -1,3 +1,4 @@
+<app-sidebar></app-sidebar>
 <section class="card">
     <section class="card__list" *ngFor="let product of products">
         <p *ngIf="isAvailable" class="card__list__title"> {{ product.productName | titlecase }}</p>
