feature: add logout

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -15,6 +15,6 @@
     </section>
     <footer class="menu__profile">
         <p>{{ user }}</p>
-        <i class="material-icons ">logout</i>
+        <button (click)="logout()" class="menu__profile__button"><i class="material-icons ">logout</i></button>
     </footer>
 </aside>
