--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -98,5 +98,11 @@
             font-weight: $bold;
             flex-direction: column;
         }
+
+        &__button {
+            border: none;
+            background-color: $purple;
+            cursor: pointer;
+        }
     }
 }
